--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
   },
   "dependencies": {
     "@sanity/image-url": "^1.1.0",
+    "@svgr/webpack": "^8.1.0",
     "next": "15.3.1",
     "next-sanity": "^9.10.6",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "sass": "^1.89.0",
+    "scss": "^0.2.4",
+    "swiper": "^11.2.6"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
