--- a/package.json
+++ b/package.json
@@ -9,14 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@sanity/client": "^7.3.0",
+    "@sanity/codegen": "^3.89.0",
     "@sanity/image-url": "^1.1.0",
     "@svgr/webpack": "^8.1.0",
     "next": "15.3.1",
-    "next-sanity": "^9.10.6",
+    "next-sanity": "^9.11.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "sass": "^1.89.0",
     "scss": "^0.2.4",
+    "styled-components": "^6.1.18",
     "swiper": "^11.2.6"
   },
   "devDependencies": {
