--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@sanity/codegen": "^3.89.0",
     "@sanity/image-url": "^1.1.0",
     "@svgr/webpack": "^8.1.0",
+    "gsap": "^3.13.0",
     "next": "15.3.1",
     "next-sanity": "^9.11.1",
     "react": "^19.0.0",
