--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@portabletext/react": "^3.2.1",
     "@sanity/client": "^7.3.0",
     "@sanity/codegen": "^3.89.0",
     "@sanity/image-url": "^1.1.0",
