--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@portabletext/react": "^3.2.1",
+    "@sanity/asset-utils": "^2.2.1",
     "@sanity/client": "^7.3.0",
     "@sanity/codegen": "^3.89.0",
     "@sanity/image-url": "^1.1.0",
+    "@sanity/types": "^3.95.0",
     "@svgr/webpack": "^8.1.0",
     "gsap": "^3.13.0",
     "next": "15.3.1",
